# oldstack

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/concon/: tval.h
devel/include/keycon/: tval.h
devel/include/navcon/: tval.h
devel/include/softcon/: oil.h  taskFlag.h  taskVal.h
devel/lib/concon/: bosscon  input_AHRS
devel/lib/keycon/: key
devel/lib/navcon/: bossnav  tes
devel/lib/pkgconfig/: concon.pc  keycon.pc  navcon.pc  softcon.pc
devel/lib/python2.7/dist-packages/concon/msg/: _tval.py
devel/lib/python2.7/dist-packages/keycon/msg/: __init__.py  _tval.py
devel/lib/python2.7/dist-packages/navcon/msg/: _tval.py
devel/lib/python2.7/dist-packages/softcon/msg/: __init__.py  _oil.py  _taskFlag.py  _taskVal.py
devel/lib/softcon/: bosssoft
devel/share/common-lisp/ros/concon/msg/: _package.lisp  _package_tval.lisp  concon-msg.asd  tval.lisp
devel/share/common-lisp/ros/keycon/msg/: _package.lisp  _package_tval.lisp  keycon-msg.asd  tval.lisp
devel/share/common-lisp/ros/navcon/msg/: _package.lisp  _package_tval.lisp  navcon-msg.asd  tval.lisp
devel/share/common-lisp/ros/softcon/msg/: _package.lisp  _package_oil.lisp  _package_taskFlag.lisp  _package_taskVal.lisp  oil.lisp  softcon-msg.asd  taskFlag.lisp  taskVal.lisp
devel/share/concon/cmake/: concon-msg-extras.cmake  concon-msg-paths.cmake  conconConfig.cmake
devel/share/gennodejs/ros/concon/msg/: _index.js  tval.js
devel/share/gennodejs/ros/keycon/msg/: tval.js
devel/share/gennodejs/ros/navcon/msg/: tval.js
devel/share/gennodejs/ros/softcon/msg/: _index.js  oil.js  taskFlag.js  taskVal.js
devel/share/keycon/cmake/: keycon-msg-paths.cmake  keyconConfig.cmake
devel/share/navcon/cmake/: navcon-msg-paths.cmake  navconConfig.cmake
devel/share/roseus/ros/concon/: manifest.l
devel/share/roseus/ros/concon/msg/: tval.l
devel/share/roseus/ros/keycon/: manifest.l
devel/share/roseus/ros/keycon/msg/: tval.l
devel/share/roseus/ros/navcon/: manifest.l
devel/share/roseus/ros/navcon/msg/: tval.l
devel/share/roseus/ros/softcon/: manifest.l
devel/share/roseus/ros/softcon/msg/: oil.l  taskFlag.l  taskVal.l
devel/share/softcon/cmake/: softcon-msg-paths.cmake  softconConfig.cmake
src/concon/: CMakeLists.txt  package.xml
src/concon/arduino/: arduino.ino  tval.h
src/concon/cpp/: Boss_Con.cpp~  PID_Controller.cpp~  bosscon.cpp  input_AHRS.cpp  input_AHRS.cpp~  write_IPS.cpp~
src/concon/cpp/testing/: #Boss_Con.cpp#  depthpitchpid.cpp  enablepitch.cpp  enableyaw.cpp  record.cpp
src/concon/launch/: auv.launch  launchMain.launch~  test.launch
src/keycon/: CMakeLists.txt  key.cpp  package.xml
src/keycon/cpp/: key.cpp
src/keycon/launch/: manual_control.launch
src/navcon/: CMakeLists.txt  package.xml
src/navcon/cpp/: bossnav.cpp  depth.cpp  navigation.cpp  test.cpp
src/navcon/msg/: tval.msg
src/softcon/: CMakeLists.txt
src/softcon/cpp/: Bin.cpp  Bin.cpp~  Boss_Soft.cpp  Boss_Soft.cpp~  Flair.cpp~  Gate.cpp  Gate.cpp~  Task_Det.cpp~  follower.cpp
src/softcon/launch/: gate.launch
src/softcon/msg/: Untitled Document~  fire.msg  move_msg.msg~  movemsg.msg~  taskFlag.msg  taskVal.msg  tasksTP.msg  tasksVD.msg
